Added searchbyname and userdetails endpoints
